--- a/todo/src/main/res/values/strings.xml
+++ b/todo/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
   <string name="app_name">Todo</string>
+
+  <string name="menu_create">Create</string>
+  <string name="menu_save">Save</string>
+  <string name="title_activity_main2">Main2Activity</string>
+  <string name="title_home">Home</string>
+  <string name="title_dashboard">Dashboard</string>
+  <string name="title_notifications">Notifications</string>
 </resources>
