--- a/todo/src/main/res/values/strings.xml
+++ b/todo/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
   <string name="menu_create">Create</string>
   <string name="menu_save">Save</string>
+  <string name="menu_mark_done">Done</string>
   <string name="title_activity_main2">Main2Activity</string>
   <string name="title_home">Home</string>
   <string name="title_dashboard">Dashboard</string>
