--- a/todo/src/main/res/values/strings.xml
+++ b/todo/src/main/res/values/strings.xml
@@ -4,9 +4,13 @@
   <string name="menu_create">Create</string>
   <string name="menu_save">Save</string>
   <string name="menu_mark_done">Done</string>
+  <string name="menu_select_all">All</string>
   <string name="menu_delete">Delete</string>
-  <string name="title_activity_main2">Main2Activity</string>
   <string name="title_home">Home</string>
+  <string name="title_create">Create</string>
+  <string name="title_modify">Modify</string>
+
+  <string name="title_activity_main2">Main2Activity</string>
   <string name="title_dashboard">Dashboard</string>
   <string name="title_notifications">Notifications</string>
 </resources>
